vite-project/src/components/About.css
/* About.css */
.about {
  padding: 6rem 0;
  min-height: 100vh;
  display: flex;
  align-items: center;
}

.about-content {
  display: flex;
  justify-content: space-between; /* text left, image right */
  align-items: flex-start;            /* vertical center */
  gap: 2rem;
}

.about-text {
  margin-top: 0.5rem;
  flex: 1; /* let text take available space */
}

.about-text p {
  margin-top: 0.5rem;
  margin-bottom: 1.5rem;
  font-size: 1.6rem;
  line-height: 1.7;
}



.about-image {
  flex: 1; /* image takes available space */
  display: flex;
  justify-content: center;
}

.profile-image {
  width: 385px;
  height: 385px;
  border-radius: 50%;
  object-fit: cover;
  border: 3px solid #fcfaf9;
  box-shadow: 0 4px 12px rgba(0,0,0,0.2);

}

/* Responsive Design */
@media (max-width: 968px) {
  .about-content {
    flex-direction: column; /* stack text and image */
    text-align: center;
  }

  .about-text {
    flex: unset;
    width: 100%;
  }

  .about-image {
    order: -1; /* image appears above text */
    margin-bottom: 2rem;
  }

  .profile-image {
    width: 390px;
    height: 380px;
  }
}

@media (max-width: 480px) {
  .technologies ul {
    grid-template-columns: 1fr;
  }

  .profile-image {
    width: 200px;
    height: 200px;
  }
}
.npm-package {
  font-size: 1.1rem;
  color:white;
   margin-top: 7rem;
  display: block;  /* makes margin work reliably */
  width: 100%;  
}

.npm-package a {
  background: 0 2px 6px rgba(24, 16, 12, 0.2);
  color: rgb(4, 1, 10);
  padding: 6px 12px;
  margin-top: 10px;
  margin-left: 6px;
  text-decoration: none;
  border-radius: 8px;
  font-weight: 500;
  transition: 0.3s ease;
  box-shadow: 0 2px 6px rgba(0,0,0,0.2);
  border: 2ps solid white;
}

.npm-package a:hover {
  background: white;
  transform: translateY(-2px);
  box-shadow: 0 4px 10px rgba(0,0,0,0.3);
}

.npm-wrapper {
  
  
  margin-top: 9rem;
}
.npm-wrapper p{
  font-size: 1.5rem
}

